deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastshop-db-huan
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastshop-db-huan
  template:
    metadata:
      labels:
        app: fastshop-db-huan
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastshop-app-huan
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastshop-app-huan
  template:
    metadata:
      labels:
        app: fastshop-app-huan
    spec:
      containers:
      - name: web-app
        image: huuhuanswe/fastshop-backend-huan:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
