service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastshop-db-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: fastshop-db-huan
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fastshop-app-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: fastshop-app-huan
  ports:
  - port: 8080
    targetPort: 8002
    nodePort: 31080
    protocol: TCP
