ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastshop-ingress-huan
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: huan20.io.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastshop-app-svc
            port:
              number: 8080
